# astrome

./: .firebaserc  .gitignore  README.md  apphosting.yaml  firebase.json  firestore.rules
.github/agents/: copilot-instructions.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260206_2131_bc2fe3d73e21_initial_schema_with_locations_panchang_.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/middleware/: __init__.py  error_handler.py
backend/src/api/routes/: definitions.py  panchang.py
backend/src/config/: __init__.py  logging.py  settings.py
backend/src/data/: indian_cities.json  load_definitions.py  term_definitions.json
backend/src/data/ephe/: README.md
backend/src/db/: __init__.py  database.py  schema.py
backend/src/models/: __init__.py  base.py  definition.py  location.py  panchang.py
backend/src/services/: __init__.py  ephemeris.py  panchang_calculator.py
backend/src/services/calculations/: auspicious.py  inauspicious.py  nakshatra.py  sun.py  tamil_calendar.py  tithi.py  utils.py  yoga_karana.py
backend/tests/: test_tamil_calendar.py
docs/observability/: alerts.md  analytics-ga4.md  gcp-dashboards.md  metrics-catalog.md  (+2 more)
frontend/: .env.development  .env.local.example  .env.production  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
(+57 files in other folders)
